objects/ASI_MFM_CN_JCT_FGL_IBD__c.object
<CustomObject>
    <description>JCT : Junction Object
FGL : Free goods request &amp; POSM Line Item
IBD : Inventory Balance Detail</description>
    <fields>
        <fullName>ASI_MFM_Check_Holded__c</fullName>
        <formula>AND(
(ASI_MFM_Holdied_Quantity__c == FALSE),
(ASI_MFM_FG_ETL__c == FALSE),

OR
(ASI_MFM_FreeGoodsRequestStatus__c == &apos;Submitted&apos;,
ASI_MFM_FreeGoodsRequestStatus__c == &apos;In Progress&apos;,
ASI_MFM_FreeGoodsRequestStatus__c == &apos;Approved by Logistic&apos;
)

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Check Holded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Check_Recalculate__c</fullName>
        <formula>NOT(
ASI_MFM_FG_Quantity__c == ASI_MFM_RequestQty__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Check Recalculate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_FGL_Status__c</fullName>
        <formula>Text(ASI_MFM_Request_Item__r.ASI_FOC_Brand_Director_Approval_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Free Goods Request Line Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_FG_ETL__c</fullName>
        <formula>ASI_MFM_Request_Item__r.ASI_FOC_ETL_Complete__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Free Goods Request ETL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_FG_Quantity__c</fullName>
        <formula>ASI_MFM_Request_Item__r.ASI_MFM_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Free Goods Request Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_FreeGoodsRequestStatus__c</fullName>
        <formula>Text(ASI_MFM_Request_Item__r.ASI_FOC_Request_Order__r.ASI_FOC_Request_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Free Goods Request Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Holdied_Quantity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Holded Quantity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_IBD__c</fullName>
        <label>Inventory Balance Detail</label>
        <referenceTo>ASI_MFM_InventoryBalanceDetail__c</referenceTo>
        <relationshipLabel>Junction Of FGL to IBD</relationshipLabel>
        <relationshipName>Junction_Of_FGL_to_IBD</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_RequestQty__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Request_Item__c</fullName>
        <label>Request Item</label>
        <referenceTo>ASI_FOC_Request_Item__c</referenceTo>
        <relationshipLabel>Junction Of FGL to IBD (Request Item)</relationshipLabel>
        <relationshipName>Junction_Of_FGL_to_IBD</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Request_Status__c</fullName>
        <label>Request Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Debug__c</fullName>
        <label>Debug</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Junction Of FGL to IBD</label>
    <nameField>
        <displayFormat>JCT-{YYYY}{0000000}</displayFormat>
        <label>Junction Of FGL to IBD Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Junction Of FGL to IBD</pluralLabel>
    <recordTypes>
        <fullName>ASI_MFM_CN_POSM</fullName>
        <active>true</active>
        <label>CN POSM</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>